--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,33 +2,42 @@ version: '3.1'
 
 services:
   springboot:
-    image: chaithanyap20/spring-boot-mongo-docker
+    image: chaithanyap20/spring-boot-mongo-docker:latest
+    restart: always # This will be ignored if we deploy in docker swarm
+    container_name: springboot
     environment:
     - MONGO_DB_HOSTNAME=mongo
-    - MONGO_DB_USERNAME=devdb
-    - MONGO_DB_PASSWORD=devdb1234
     ports:
-    - 8080:8080
+    - 8090:8080
     working_dir: /opt/app
+    depends_on:
+      - mongo
+    deploy:  # This will be considered only in docker swarm.
+      replicas: 2
+      update_config:
+        parallelism: 1
+        delay: 20s
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 5
     networks:
     - springappnetwork
 
   mongo:
     image: mongo
     container_name: springboot-mongo
-    environment:
-    - MONGO_INITDB_ROOT_USERNAME=devdb
-    - MONGO_INITDB_ROOT_PASSWORD=devdb1234
     volumes:
       - mongobkp:/data/db
-	restart: always
+    restart: always
     networks:
     - springappnetwork
-    
+
 volumes:
   mongobkp:
     driver: local
-    
+
 networks:
   springappnetwork:
     driver: bridge
+
